--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="server_error">Server isn\'t responding! Please try again.</string>
     <string name="network_error">Network not found! Please check your internet connection and try again.</string>
     <string name="parse_error">Unable to parse Data! Please try again.</string>
+    <string name="menu_chat">Chat</string>
+    <string name="menu_edit_profile">Edit</string>
     <!-- Nav Drawer Menu Items -->
     <!--<string-array name="nav_drawer_items">
         <item>Home</item>
